# Project-Cells

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: cell.h  colour.h  controls.h  game.h  header.h  kernels.h  logging.h  main.cpp  rendering.h  world.cpp  world.h
